VP 10.5.0 Changelog
------------------------
- draw also flipper thickness in the editor

- improve gate swing physics, correct backwards initial swing, and expose new gravity factor parameter.
  Also add some "bounce back" for 1-way gates. Currently set up to use as-is defaults, but Wrd1972 recommends the following settings:
   Ideal setting for GATE motion:
    Elasticity = .4 (default)
    Friction = .02 (default)
    Dampening = .85
    Gravity = 3
   Ideal for SWITCH ACTUATOR motion:
    Elasticity = .4 (default)
    Friction = .02 (default)
    Dampening = .9
    Gravity = 1

- add copy/paste feature for control points. Select a control point, press the "Copy" button or CTRL+C to copy the coordinates. 
  Then select another control point of another element and press the "Paste" button or leave the mouse cursor over the control point and press CTRL+V.
  ATTENTION: you can also copy/paste control points of the same element but this can lead to bad shapes of the selected element

- fix kicker export bug

- improve quality of internal DMD shader, now it's almost resolution independent, especially when using it via flashers (e.g. FSS tables and the like)

- add units conversion feature from VPUnits -> inches/millimeters in the status bar for control points. 
  If you select two control points of a wall/ramp the status bar shows the distance of X/Y in the selected unit.
  The unit used for the conversion can be set in the editor options dialog.

- animate bumper skirts depending on ball impact

- fix triggers getting "stuck" when the ball is moving fast

- allow reels and textboxes to be moved via the script (and textboxes can also be placed at floating point precision level)

- fix detection of used materials (bumpers, triggers & kickers were missing) and used images (color grading LUT was missing)

- fix sound device selection/mapping for music (e.g. usually the backglass device)

- script button can now both open and close the script editor
